<resources>
    <string name="app_name">Tattoo My Name On Photo Editor</string>

    <string name="save">Save</string>
    <string name="done">Done</string>
    <string name="home">Home</string>
    <string name="customize">Customize</string>
    <string name="about">About</string>
    <string name="cancel">Cancel</string>
    <string name="reset">Reset</string>
    <string name="all">All</string>
    <string name="del">Delete</string>
    <string name="share">Share</string>
    <string name="preview">Preview</string>
    <string name="copy">Copy</string>
    <string name="clear">Clear</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="theme">Theme</string>
    <string name="error">Error</string>
    <string name="confirm">Confirm</string>
    <string name="apply">Apply</string>
    <string name="continue_text">Continue</string>
    <string name="ok">OK</string>
    <string name="move">Move</string>
    <string name="empty">Empty</string>

    <string name="crop">Crop</string>
    <string name="error_crop">Error Crop</string>
    <string name="finish">Press 1 more time to exit</string>

    <string name="this_action_may_contain_ads">This action may contain ads</string>
    <string name="des_permission">Allow Tattoo My Name On Photo Editor to access photos on your device?</string>
    <string name="des_permission_2">We need you to provide this permission to perform actions inside the app</string>

    //setting
    <string name="more_app">More App</string>
    <string name="rate_us">Rate Us</string>
    <string name="rate_app">Rate App</string>
    <string name="share_app">Share App</string>
    <string name="feedback">FeedBack</string>
    <string name="pp">Privacy Policy</string>
    <string name="do_you_love_this_app">Do you love this app?</string>

    //premium
    <string name="lifetime">Life time</string>
    <string name="lifetime_price">$99.99</string>
    <string name="upgrade_premium">Upgrade Premium</string>
    <string name="try_premium">Try Premium</string>
    <string name="best_seller">Best Seller</string>
    <string name="start_like_a_pro">Start Like A Pro</string>
    <string name="unlock_all_feature">Unlock All Feature</string>
    <string name="subscription_will_auto_renew_cancel_anytime">Subscription Will Auto-Renew. Cancel Anytime.</string>
    <string name="create_tattoo">Create Tattoo</string>
    <string name="unlock_all_tattoos">Unlock All Tattoos</string>
    <string name="remove_all_ads">Remove All Ads</string>
    <string name="full_feature">Full Feature</string>
    <string name="lifetime_support">Lifetime Support</string>
    <string name="des_vip_2">If the themes is not unlocked after payment, You can go to "Store > Restore". You\'ll automatically be charged each renewal period depending on your subscription. You can unsubscribe at anytime.</string>

    //edit
    <string name="pick_a_picture">Pick A Picture</string>
    <string name="crop_a_picture">Crop A Picture</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="rotate">Rotate</string>
    <string name="flip_x">Flip-Y</string>
    <string name="flip_y">Flip-X</string>
    <string name="tattoos">Tattoos</string>
    <string name="tattoo">Tattoo</string>
    <string name="text">Text</string>
    <string name="filter">Filter</string>
    <string name="frame">Frame</string>
    <string name="adjust">Adjust</string>
    <string name="opacity">Opacity</string>
    <string name="color">Color</string>
    <string name="shadow">Shadow</string>
    <string name="color_text">Color Text</string>
    <string name="shadow_text">Shadow Text</string>
    <string name="edit_text">Edit Text</string>

    <string name="brightness">Brightness</string>
    <string name="contrast">Contrast</string>
    <string name="exposure">Exposure</string>
    <string name="saturation">Saturation</string>
    <string name="sharpen">Sharpen</string>
    <string name="vignette">Vignette</string>

    <string name="completed">Completed</string>
    <string name="drafts">Drafts</string>
    <string name="download">Download</string>
    <string name="wallpaper">Wallpaper</string>
    <string name="edit">Edit</string>
    <string name="complete">Complete</string>
    <string name="discard">Discard</string>
    <string name="do_you_want_to_discard_creating">Do you want to discard creating?</string>
    <string name="go_to_edit_photo_now">Go to edit photo now?</string>
    <string name="are_you_sure_want_to_delete_this_project">Are you sure want to delete this project?</string>
    <string name="please_choose_other_project">Please choose other Project</string>

    <string name="settings">Settings</string>
    <string name="my_story">My Tattoo</string>
    <string name="create">Create</string>
</resources>