<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/boder_dialog"
    android:paddingVertical="@dimen/_16sdp">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_16sdp"
        android:fontFamily="@font/solway_bold"
        android:gravity="center"
        android:text="@string/are_you_sure_want_to_delete_this_project"
        android:textColor="@color/black"
        android:textSize="@dimen/_13ssp"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvCancel"
        android:layout_width="0dp"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_13sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:background="@drawable/bg_btn_disable"
        android:fontFamily="@font/solway_bold"
        android:gravity="center"
        android:text="@string/cancel"
        android:textColor="@color/color_2F99FF"
        android:textSize="@dimen/_15ssp"
        app:layout_constraintEnd_toStartOf="@id/tvDone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTitle" />

    <TextView
        android:id="@+id/tvDone"
        android:layout_width="0dp"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_16sdp"
        android:background="@drawable/bg_btn_enable_2"
        android:fontFamily="@font/solway_bold"
        android:gravity="center"
        android:text="@string/ok"
        android:textColor="@color/white"
        android:textSize="@dimen/_15ssp"
        app:layout_constraintBottom_toBottomOf="@id/tvCancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tvCancel"
        app:layout_constraintTop_toTopOf="@id/tvCancel" />
</androidx.constraintlayout.widget.ConstraintLayout>