<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/black"
    android:paddingVertical="@dimen/_10sdp">

    <LinearLayout
        android:id="@+id/llTattoos"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintEnd_toStartOf="@id/llText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:src="@drawable/ic_tattoos_edit" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:fontFamily="@font/solway_regular"
            android:text="@string/tattoos"
            android:textColor="@color/white"
            android:textSize="@dimen/_13ssp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintEnd_toStartOf="@id/llFilter"
        app:layout_constraintStart_toEndOf="@id/llTattoos"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:src="@drawable/ic_text_edit" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:fontFamily="@font/solway_regular"
            android:text="@string/text"
            android:textColor="@color/white"
            android:textSize="@dimen/_13ssp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llFilter"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintEnd_toStartOf="@id/llFrame"
        app:layout_constraintStart_toEndOf="@id/llText"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:src="@drawable/ic_filter_edit" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:fontFamily="@font/solway_regular"
            android:text="@string/filter"
            android:textColor="@color/white"
            android:textSize="@dimen/_13ssp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llFrame"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintEnd_toStartOf="@id/llAdjust"
        app:layout_constraintStart_toEndOf="@id/llFilter"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:src="@drawable/ic_frame_edit" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:fontFamily="@font/solway_regular"
            android:text="@string/frame"
            android:textColor="@color/white"
            android:textSize="@dimen/_13ssp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llAdjust"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/llFrame"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:src="@drawable/ic_adjust_edit" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:fontFamily="@font/solway_regular"
            android:text="@string/adjust"
            android:textColor="@color/white"
            android:textSize="@dimen/_13ssp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>