<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivBack"
        android:layout_width="@dimen/_34sdp"
        android:layout_height="@dimen/_34sdp"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_34sdp"
        android:padding="@dimen/_5sdp"
        android:src="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/black" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivTick"
        android:layout_width="@dimen/_34sdp"
        android:layout_height="@dimen/_34sdp"
        android:layout_marginTop="@dimen/_34sdp"
        android:layout_marginEnd="@dimen/_16sdp"
        android:padding="@dimen/_5sdp"
        android:src="@drawable/ic_tick"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/black" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:fontFamily="@font/solway_bold"
        android:gravity="center"
        android:text="@string/my_story"
        android:textColor="@color/black"
        android:textSize="@dimen/_18ssp"
        app:layout_constraintBottom_toBottomOf="@id/ivBack"
        app:layout_constraintEnd_toStartOf="@id/ivTick"
        app:layout_constraintStart_toEndOf="@id/ivBack"
        app:layout_constraintTop_toTopOf="@id/ivBack" />

    <TextView
        android:id="@+id/tvCompleted"
        android:layout_width="0dp"
        android:layout_height="@dimen/_48sdp"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_13sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:background="@drawable/bg_btn_enable"
        android:fontFamily="@font/solway_regular"
        android:gravity="center"
        android:text="@string/completed"
        android:textColor="@color/white"
        android:textSize="@dimen/_15ssp"
        app:layout_constraintEnd_toStartOf="@id/tvDrafts"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivBack" />

    <TextView
        android:id="@+id/tvDrafts"
        android:layout_width="0dp"
        android:layout_height="@dimen/_48sdp"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_16sdp"
        android:background="@drawable/bg_btn_enable"
        android:fontFamily="@font/solway_regular"
        android:gravity="center"
        android:text="@string/drafts"
        android:textColor="@color/white"
        android:textSize="@dimen/_15ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tvCompleted"
        app:layout_constraintTop_toTopOf="@id/tvCompleted" />

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/_13sdp"
        android:scrollbars="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvCompleted" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/rlMove"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_16sdp"
        android:background="@drawable/bg_stroke"
        android:paddingVertical="@dimen/_16sdp"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/tvCompleted">

        <TextView
            android:id="@+id/tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/solway_regular"
            android:text="@string/go_to_edit_photo_now"
            android:textColor="@color/black"
            android:textSize="@dimen/_15ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/bg_btn_enable_1"
            android:paddingHorizontal="@dimen/_15sdp"
            android:paddingVertical="@dimen/_5sdp"
            android:text="@string/move"
            android:textColor="@color/white"
            android:textSize="@dimen/_13ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>