<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/boder_dialog">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_16sdp"
        android:fontFamily="@font/solway_bold"
        android:text="@string/discard"
        android:textColor="@color/black"
        android:textSize="@dimen/_15ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvDes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_13sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:fontFamily="@font/solway_regular"
        android:gravity="center"
        android:text="@string/do_you_want_to_discard_creating"
        android:textColor="@color/black"
        android:textSize="@dimen/_13ssp"
        app:layout_constraintTop_toBottomOf="@id/tvTitle" />

    <View
        android:id="@+id/v"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:background="@color/color_3C3C43"
        app:layout_constraintTop_toBottomOf="@id/tvDes" />

    <View
        android:id="@+id/v1"
        android:layout_width="@dimen/_1sdp"
        android:layout_height="0dp"
        android:background="@color/color_3C3C43"
        app:layout_constraintBottom_toBottomOf="@id/tvCancel"
        app:layout_constraintEnd_toStartOf="@id/tvDiscard"
        app:layout_constraintStart_toEndOf="@id/tvCancel"
        app:layout_constraintTop_toTopOf="@id/tvCancel" />

    <View
        android:id="@+id/v2"
        android:layout_width="@dimen/_1sdp"
        android:layout_height="0dp"
        android:background="@color/color_3C3C43"
        app:layout_constraintBottom_toBottomOf="@id/tvCancel"
        app:layout_constraintEnd_toStartOf="@id/tvSave"
        app:layout_constraintStart_toEndOf="@id/tvDiscard"
        app:layout_constraintTop_toTopOf="@id/tvCancel" />

    <TextView
        android:id="@+id/tvCancel"
        android:layout_width="0dp"
        android:layout_height="@dimen/_40sdp"
        android:fontFamily="@font/solway_bold"
        android:gravity="center"
        android:text="@string/cancel"
        android:textColor="@color/color_FF4F5D"
        android:textSize="@dimen/_15ssp"
        app:layout_constraintEnd_toStartOf="@id/tvDiscard"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/v" />

    <TextView
        android:id="@+id/tvDiscard"
        android:layout_width="0dp"
        android:layout_height="@dimen/_40sdp"
        android:fontFamily="@font/solway_bold"
        android:gravity="center"
        android:text="@string/discard"
        android:textColor="@color/color_2F99FF"
        android:textSize="@dimen/_15ssp"
        app:layout_constraintBottom_toBottomOf="@id/tvCancel"
        app:layout_constraintEnd_toStartOf="@id/tvSave"
        app:layout_constraintStart_toEndOf="@id/tvCancel"
        app:layout_constraintTop_toTopOf="@id/tvCancel" />

    <TextView
        android:id="@+id/tvSave"
        android:layout_width="0dp"
        android:layout_height="@dimen/_40sdp"
        android:fontFamily="@font/solway_bold"
        android:gravity="center"
        android:text="@string/save"
        android:textColor="@color/color_2F99FF"
        android:textSize="@dimen/_15ssp"
        app:layout_constraintBottom_toBottomOf="@id/tvCancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tvDiscard"
        app:layout_constraintTop_toTopOf="@id/tvCancel" />
</androidx.constraintlayout.widget.ConstraintLayout>