<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/black_65"
    android:paddingVertical="@dimen/_10sdp">

    <TextView
        android:id="@+id/tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_13sdp"
        android:text="@string/brightness"
        android:textColor="@color/white"
        android:textSize="@dimen/_13ssp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.tattoo.tattoomaker.on.myphoto.viewcustom.CustomSeekbarTwoWay
        android:id="@+id/vSeekbar"
        android:layout_width="0dp"
        android:layout_height="@dimen/_16sdp"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_13sdp"
        app:layout_constraintBottom_toBottomOf="@id/tv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tv"
        app:layout_constraintTop_toTopOf="@id/tv" />

    <HorizontalScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:scrollbars="none"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/vSeekbar">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/llBrightness"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:padding="@dimen/_10sdp"
                app:layout_constraintEnd_toStartOf="@id/llContrast"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:src="@drawable/ic_color_text" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:fontFamily="@font/solway_regular"
                    android:text="@string/color_text"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_13ssp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/llContrast"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:padding="@dimen/_10sdp"
                app:layout_constraintEnd_toStartOf="@id/llSaturation"
                app:layout_constraintStart_toEndOf="@id/llBrightness"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:src="@drawable/ic_contrast" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:fontFamily="@font/solway_regular"
                    android:text="@string/contrast"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_13ssp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/llSaturation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:padding="@dimen/_10sdp"
                app:layout_constraintEnd_toStartOf="@id/llExposure"
                app:layout_constraintStart_toEndOf="@id/llContrast"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:src="@drawable/ic_saturation" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:fontFamily="@font/solway_regular"
                    android:text="@string/saturation"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_13ssp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/llExposure"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:padding="@dimen/_10sdp"
                app:layout_constraintEnd_toStartOf="@id/llSharpen"
                app:layout_constraintStart_toEndOf="@id/llSaturation"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:src="@drawable/ic_exposure" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:fontFamily="@font/solway_regular"
                    android:text="@string/exposure"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_13ssp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/llSharpen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:padding="@dimen/_10sdp"
                app:layout_constraintEnd_toStartOf="@id/llVignette"
                app:layout_constraintStart_toEndOf="@id/llExposure"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:src="@drawable/ic_sharpen" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:fontFamily="@font/solway_regular"
                    android:text="@string/sharpen"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_13ssp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/llVignette"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:padding="@dimen/_10sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/llSharpen"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:src="@drawable/ic_vignette" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:fontFamily="@font/solway_regular"
                    android:text="@string/vignette"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_13ssp" />
            </LinearLayout>
        </LinearLayout>
    </HorizontalScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>