<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivBack"
        android:layout_width="@dimen/_34sdp"
        android:layout_height="@dimen/_34sdp"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_34sdp"
        android:padding="@dimen/_5sdp"
        android:src="@drawable/ic_back"
        android:tint="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_13sdp"
        android:fontFamily="@font/solway_regular"
        android:gravity="center"
        android:text="@string/pick_a_picture"
        android:textColor="@color/black"
        android:textSize="@dimen/_15ssp"
        app:layout_constraintBottom_toBottomOf="@id/ivBack"
        app:layout_constraintEnd_toStartOf="@id/btn"
        app:layout_constraintStart_toEndOf="@id/ivBack"
        app:layout_constraintTop_toTopOf="@id/ivBack" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/btn"
        android:layout_width="@dimen/_34sdp"
        android:layout_height="@dimen/_34sdp"
        android:layout_marginTop="@dimen/_34sdp"
        android:layout_marginEnd="@dimen/_16sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvCam"
        android:layout_width="0dp"
        android:layout_height="@dimen/_48sdp"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_13sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:background="@drawable/bg_btn_enable"
        android:fontFamily="@font/solway_regular"
        android:gravity="center"
        android:text="@string/camera"
        android:textColor="@color/white"
        android:textSize="@dimen/_15ssp"
        app:layout_constraintEnd_toStartOf="@id/tvGallery"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivBack" />

    <TextView
        android:id="@+id/tvGallery"
        android:layout_width="0dp"
        android:layout_height="@dimen/_48sdp"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_16sdp"
        android:background="@drawable/bg_btn_enable"
        android:fontFamily="@font/solway_regular"
        android:gravity="center"
        android:text="@string/gallery"
        android:textColor="@color/white"
        android:textSize="@dimen/_15ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tvCam"
        app:layout_constraintTop_toTopOf="@id/tvCam" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rcv"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/_13sdp"
        android:scrollbars="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvCam" />
</androidx.constraintlayout.widget.ConstraintLayout>